--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "sit725-2022-t3-prac4",
+  "name": "sit725-2022-t3-prac5",
   "version": "1.0.0",
-  "description": "SIT 725 PRACTICALS4",
+  "description": "SIT 725 PRACTICALS5",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vinithbalu/sit725-2022-t3-prac4.git"
+    "url": "git+https://github.com/vinithbalu/vinithbalu/sit725-2022-t2-prac5-.git"
   },
   "keywords": [
     "express",
@@ -17,11 +17,12 @@
   "author": "vinithbalu",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vinithbalu/sit725-2022-t3-prac4/issues"
+    "url": "https://github.com/vinithbalu/vinithbalu/sit725-2022-t2-prac5-/issues"
   },
-  "homepage": "https://github.com/vinithbalu/sit725-2022-t3-prac4#readme",
+  "homepage": "https://github.com/vinithbalu/vinithbalu/sit725-2022-t2-prac5-#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "nodemon": "^2.0.20"
